# btrview

./: .gitattributes  .gitignore  LICENSE.md  README.md  btr_view.py  btrfsutil.pyi  pyproject.toml  requirements.txt
btrview/: __init__.py  __main__.py  btr_dict.py  btrfs.py  mounts.py  rich_output.py  subvolume.py  typed_info.py  utils.py
btrview/scripts/: btrsend.py  btrview.py
